# PCSX2

./: CDVD.cpp  CdRom.cpp  Counters.cpp  HashMap.h  Hw.h  HwRead.cpp  IopBios.cpp  IopCommon.h  IopCounters.cpp  IopCounters.h  IopDma.cpp  IopEvents.h  IopHw.cpp  IopHw.h  IopMem.cpp  IopMem.h  IopSio2.cpp  Makefile.am  Misc.cpp  Patch.cpp  Plugins.cpp  PrecompiledHeader.h  R3000A.cpp  R3000A.h  R3000AInterpreter.cpp  R3000AOpcodeTables.cpp  R3000Exceptions.h  R5900.cpp  SafeArray.h  SaveState.cpp  Sif.cpp  Sio.cpp  SourceLog.cpp  Stats.cpp  System.cpp  clean_msvc.cmd  pcsx2_2008.sln  pcsx2_suite_2008.sln
CDVD/: CDVD.cpp  CDVDiso.cpp  CDVDisodrv.cpp  CDVDlib.h  CdRom.cpp  CdRom.h
DebugTools/: DisR3000A.cpp  DisR3000asm.cpp  Makefile.am
Linux/: DebugDlg.cpp
R3000air/: R3000air.cpp  R3000air.h  R3000airDiagnostic.cpp  R3000airInstConstOpt.inl  R3000airInstruction.cpp  R3000airInstruction.inl  R3000airInterpreter.cpp  R3000airOpcodeImpl.cpp  R3000airOpcodeImpl.inl  R3000airOpcodeTables.cpp  R3000airOpcodeTables.inl
R3000air/dynarec/: RegMap_Dynamic.h  RegMap_Strict.h  iR3000air.cpp  iR3000air.h  iR3000airArithmetic.cpp  iR3000airBranch.cpp  iR3000airIntermediate.cpp  iR3000airLogic.cpp  iR3000airMemory.cpp  iR3000airMisc.cpp  iR3000airRecompileBlock.cpp  iR3000airRegMapping.cpp  iR3000airRegMapping.h
R3000air/dynarec/x86/: R3000airLogic.inl  R3000airMemory.inl  R3000airMisc.inl
RDebug/: deci2_dbgp.cpp
Subsystems/Iop/: IopSifMemory.cpp
branches/R3000air/: CDVD.cpp  CdRom.cpp  Common.h  Counters.cpp  Dump.cpp  HashMap.h  HwRead.cpp  IopBios.cpp  IopCommon.h  IopCounters.cpp  IopCounters.h  IopDma.cpp  IopDma.h  IopEvents.h  IopHw.cpp  IopHw.h  IopMem.cpp  IopMem.h  IopMemory.cpp  IopSio2.cpp  IopSio2.h  Makefile.am  Memory.cpp  Misc.cpp  Plugins.cpp  PrecompiledHeader.h  R3000A.cpp  R3000A.h  R3000AInterpreter.cpp  R3000Exceptions.h  R5900.cpp  SafeArray.h  SaveState.cpp  Sif.cpp  Sio.cpp  SourceLog.cpp  Stats.cpp  System.cpp  System.h
branches/R3000air/CDVD/: CDVD.cpp  CDVD.h  CdRom.cpp  CdRom.h
branches/R3000air/DebugTools/: DisASM.h
branches/R3000air/Linux/: DebugDlg.cpp
branches/R3000air/R3000air/: R3000air.cpp  R3000air.h  R3000airDiagnostic.cpp  R3000airInstConstOpt.h  R3000airInstruction.cpp  R3000airInstruction.inl  R3000airInterpreter.cpp  R3000airOpcodeDispatcher.inl  R3000airOpcodeImpl.cpp  R3000airOpcodeImpl.inl  R3000airOpcodeTables.inl
branches/R3000air/R3000air/dynarec/: R3000airFirstPass.cpp  R3000airIntermediate.cpp  R3000airIntermediate.h  R3000airIntermediate.inl  RegMap_Dynamic.h  iR3000air.cpp  iR3000air.h  iR3000airArithmetic.cpp  iR3000airBranch.cpp  iR3000airIntermediate.cpp  iR3000airLogic.cpp  iR3000airMemory.cpp  iR3000airRecompileBlock.cpp  iR3000airRegMapping.cpp  iR3000airRegMapping.h
branches/R3000air/R3000air/dynarec/x86/: R3000airArithmetic.inl  R3000airBranch.inl  R3000airDyngen86.cpp
branches/R3000air/RDebug/: deci2_dbgp.cpp
branches/R3000air/Subsystems/Iop/: IopHwRead.cpp  IopHwWrite.cpp  IopMemory.cpp  IopSifMemory.cpp
branches/R3000air/ps2/Iop/: IopEvents.cpp  IopHwRead.cpp  IopHwWrite.cpp  IopHw_Internal.h  IopMemory.cpp  IopNewCounters.cpp  IopSifMemory.cpp
branches/R3000air/windows/: RDebugger.cpp
branches/R3000air/windows/VCprojects/: pcsx2_2008.vcproj
branches/R3000air/x86/: iCore.h  iR3000A.cpp
branches/R3000air/x86/ix86/: ix86.cpp  ix86_inlines.inl  ix86_types.h
branches/R3000air/x86/ix86-32/: iCore-32.cpp  recVTLB.cpp
branches/R3000air/x86/ix86/implement/: movs.h
branches/legacy_gui/pcsx2/: GS.h  Gif.cpp  Hw.h  HwWrite.cpp  MTGS.cpp  Memory.cpp  NakedAsm.h  Plugins.cpp  SaveState.h  Sif.cpp  System.cpp  VUops.cpp  VUops.h  configure.ac
branches/legacy_gui/pcsx2/IPU/: Makefile.am
branches/linux-gsopen2/pcsx2/: CMakeLists.txt  MTGS.cpp  PluginManager.cpp  Plugins.h
branches/new-iop-dmac/pcsx2/: COP0.cpp  COP2.cpp  Cache.cpp  Counters.cpp  Elfheader.cpp  FiFo.cpp  GS.cpp  GS.h  Gif.cpp  HostGui.h  Hw.cpp  Hw.h  HwRead.cpp  HwWrite.cpp  Interpreter.cpp  IopBios.cpp  IopCommon.h  IopCounters.cpp  IopDma.cpp  IopDma.h  IopHw.cpp  IopHw.h  IopMem.cpp  IopSio2.cpp  MTGS.cpp  Patch.cpp  Plugins.cpp  R3000A.cpp  R3000AInterpreter.cpp  R5900.cpp  R5900Exceptions.h  R5900OpcodeImpl.cpp  R5900OpcodeTables.cpp  RecoverySystem.cpp  SPR.cpp  SaveState.cpp  Sif.cpp  Sif.h  Sio.cpp  SourceLog.cpp  (+12 more)
branches/zzogl-dev/: CMakeLists.txt  pcsx2-codeblocks.workspace
branches/zzogl-dev/cmake/: BuildParameters.cmake  SearchForStuff.cmake  SelectPcsx2Plugins.cmake
branches/zzogl-dev/debian-unstable-upstream/: rules  rules_fglrx
i18n/trunk/: Latest Translations Readme.txt
i18n/trunk/templates/: pcsx2_Iconized.pot  pcsx2_Main.pot  pcsx2_Tertiary.pot
pcsx2/: AsyncFileReader.h  Counters.cpp  Elfheader.cpp  FiFo.cpp  GS.h  MTGS.cpp  Misc.h  Sif.cpp  VUflags.cpp  VUflags.h  VUops.cpp  Vif.h  VifDma.cpp
pcsx2/CDVD/: InputIsoFile.cpp  IsoFileFormats.h
pcsx2/IPU/: IPU.cpp
pcsx2/Linux/: HacksDlg.cpp  Linux.h  LnxFlatFileReader.cpp  LnxMain.cpp  LnxMisc.cpp  LnxSysExec.cpp
pcsx2/windows/: FlatFileReaderWindows.cpp
pcsx2/x86/: aVif.S  iCOP0.cpp  iCore.h  ir5900tables.cpp  microVU_Lower.inl  sVU_Lower.cpp
pcsx2/x86/ix86/: ix86_types.h
ps2/Iop/: IopEvents.cpp  IopHwRead.cpp  IopHwWrite.cpp  IopMemory.cpp  IopNewCounters.cpp
wiki/: AboutPcsx2.wiki  ChrootAnd64bStatusLinux.wiki  CodeFormattingGuidelines.wiki  CompilationGuideForLinux.wiki  CompilationGuideForWindows.wiki  CompileGuideForWindows.wiki  DownloadsNotice.wiki  GDB.wiki  GSDXOGL_TODO.wiki  IssuesNotice.wiki  LegacyAutomakeGuide.wiki  PassingSettingsBetweenThreads.wiki  ReverbEngine.wiki  RevisionReviewEtiquette.wiki  SourceNotice.wiki  SupportedLanguagesChart.wiki  ThreadingAdvanced.wiki  ThreadingBasics.wiki  Todo.wiki  TranslationGuide.wiki  UsingPoedit.wiki  wxWidgetsCodingStrategies.wiki
windows/: Debugger.cpp  Debugreg.cpp  WinThreads.cpp
windows/VCprojects/: pcsx2_2008.vcproj
windows/cheats/: cheats.cpp
x86/: Makefile.am  iCore.cpp  iCore.h  iR3000A.cpp
x86/ix86/: ix86.cpp  ix86_simd.cpp  ix86_types.h
x86/ix86-32/: iCore-32.cpp
(+425 files in other folders)
